# serializer version: 1
# name: test_forward_pass_result_matches_the_snapshot[1]
  '[[[-106256, 17987, -96651, -81478, -134645, 116876]], [[-249816, 26951, -322055, 103414, -320527, 241214]], [[-184884, -13282, -154051, 140762, -187277, 121137]]]'
# ---
# name: test_forward_pass_result_matches_the_snapshot[3]
  '[[[-10031, -177, -154275, 20103, -44127, 42855], [-40232, -19683, 26944, -136079, 28052, -84343], [-94288, 196, -16733, -57160, 57120, 234707]], [[-207260, 88584, -189657, 58700, -136058, -255894], [-34162, 58911, 8886, -248924, 68595, 283816], [-195064, 1951, -112240, 118937, -85330, 267985]], [[-262845, 9655, -97247, 81342, -182396, -155871], [65643, 40438, -46603, -47222, -125344, 117173], [52731, -60377, 40324, -99643, -55553, 183140]]]'
# ---
# name: test_forward_pass_result_matches_the_snapshot[None]
  '[[-106256, 17987, -96651, -81478, -134645, 116876], [-249816, 26951, -322055, 103414, -320527, 241214], [-184884, -13282, -154051, 140762, -187277, 121137]]'
# ---
# name: test_representation
  '''
  SparseAutoencoder(
    (_pre_encoder_bias): TiedBias(position=pre_encoder)
    (_encoder): LinearEncoder(
      in_features=3, out_features=6
      (activation_function): ReLU()
    )
    (_decoder): UnitNormDecoder(in_features=6, out_features=3)
    (_post_decoder_bias): TiedBias(position=post_decoder)
  )
  '''
# ---
